--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "sass": "^1.84.0",
     "vue": "^3.2.13"
   },
   "devDependencies": {
@@ -19,7 +20,6 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "node-sass": "^9.0.0",
     "sass-loader": "^16.0.4"
   },
   "eslintConfig": {
