--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "prettier-plugin-vue": "^1.1.6",
     "sass": "^1.84.0",
     "sass-loader": "^10.5.2"
   },
